# swift-build

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .licenseignore  CMakeLists.txt  CODEOWNERS  Package.swift  README.md
Sources/: CMakeLists.txt
Sources/BuildService/: Session.swift
Sources/Protocol/: SWBRunnableInfo.swift
Sources/SWBAndroidPlatform/: Android.xcspec  AndroidSDK.swift  CMakeLists.txt  JavaProperties.swift  Plugin.swift
Sources/SWBAndroidPlatformPlugin/: PluginMain.swift
Sources/SWBApplePlatform/: ActoolInputFileGroupingStrategy.swift  AppIntentsMetadataCompiler.swift  AppIntentsMetadataTaskProducer.swift  AppIntentsSSUTrainingCompiler.swift  AssetCatalogCompiler.swift  AssetCatalogCompilerOutputParser.swift  CMakeLists.txt  CoreDataCompiler.swift  CoreMLCompiler.swift  DevelopmentAssetsTaskProducer.swift  DittoTool.swift  EXUtil.swift  EntityLinkerTool.swift  ExtensionPointExtractorTaskProducer.swift  ImageScaleFactorsInputFileGroupingStrategy.swift  InstrumentsPackageBuilderSpec.swift  IntentsCompiler.swift  InterfaceBuilderCompiler.swift  InterfaceBuilderCompilerOutputParser.swift  InterfaceBuilderShared.swift  LocalizationInputFileGroupingStrategy.swift  MacCatalystInfoExtension.swift  MetalCompiler.swift  MiGCompiler.swift  OpenCLCompiler.swift  Plugin.swift  PluginDCLT.swift  RealityAssetsCompilerSpec.swift  RealityAssetsTaskProducer.swift  ReferenceObjectCompiler.swift  RegisterExecutionPolicyException.swift  ResMergerLinkerSpec.swift  SceneKitToolSpec.swift  SsafAnalyzerTool.swift  StoryboardLinker.swift  StoryboardPostprocessor.swift  StringCatalogCompilerOutputParser.swift  StubBinaryTaskProducer.swift  XCStringsCompiler.swift  XCStringsInputFileGroupingStrategy.swift
Sources/SWBApplePlatformPlugin/: PluginMain.swift
Sources/SWBBuildServerProtocol/: AsyncQueue.swift  AsyncUtils.swift  BuildShutdownRequest.swift  BuildSystemMessageDependencyTracker.swift  BuildTarget.swift  BuildTargetPrepareRequest.swift  BuildTargetSourcesRequest.swift  CMakeLists.txt  CancelRequestNotification.swift  Connection.swift  CreateWorkDoneProgressRequest.swift  CustomCodable.swift  DidChangeWatchedFilesNotification.swift  DocumentURI.swift  Error.swift  FileEvent.swift  FileSystemWatcher.swift  InitializeBuildRequest.swift  LSPAny.swift  Language.swift  LocalConnection.swift  Location.swift  LogMessageNotification.swift  Message.swift  MessageRegistry.swift  MessageType.swift  Messages.swift  MillisecondsSince1970Date.swift  OnBuildExitNotification.swift  OnBuildInitializedNotification.swift  OnBuildLogMessageNotification.swift  OnBuildTargetDidChangeNotification.swift  OnWatchedFilesDidChangeNotification.swift  Position.swift  PositionRange.swift  ProgressToken.swift  QueueBasedMessageHandler.swift  RequestAndReply.swift  RequestID.swift  ResponseError+Init.swift  (+10 more)
Sources/SWBBuildService/: BuildDependencyInfo.swift  BuildDescriptionMessages.swift  BuildOperationMessages.swift  BuildService.swift  BuildServiceEntryPoint.swift  CMakeLists.txt  ClientExchangeDelegate.swift  DependencyGraphMessages.swift  DocumentationInfo.swift  LocalizationInfo.swift  Messages.swift  PlanningOperation.swift  PreviewInfo.swift  ProjectDescriptor.swift  Session.swift  Tools.swift
Sources/SWBBuildServiceBundle/: CMakeLists.txt  main.swift
Sources/SWBBuildSystem/: BuildManager.swift  BuildOperation.swift  BuildOperationExtension.swift  BuildSystemCache.swift  CMakeLists.txt  CleanOperation.swift  DependencyCycleFormatter.swift  SandboxViolations.swift
Sources/SWBCAS/: CASFSNode.swift  CASProtocol.swift  CMakeLists.txt  Errors.swift  ToolchainCASPlugin.swift  plugin_api_t.swift
Sources/SWBCLibc/: CMakeLists.txt  libc.c
Sources/SWBCSupport/: CLibRemarksHelper.c  CLibRemarksHelper.h  CLibclang.cpp  CLibclang.h  CMakeLists.txt  CSupportDefines.h  IndexStore.h  POSIXShims.c  POSIXShims.h  PluginAPI.h  PluginAPI_functions.h  PluginAPI_types.h  SWBCSupport.h  empty.swift
Sources/SWBCore/: ActivityReporting.swift  ArtifactBundleMetadata.swift  BuildConfigurationFiltering.swift  BuildDependencyInfo.swift  BuildFileFilteringContext.swift  BuildFileResolution.swift  BuildParameters.swift  BuildRequest.swift  BuildRequestContext.swift  BuildRuleAction.swift  BuildRuleCondition.swift  BuildRuleSet.swift  CMakeLists.txt  CapturedBuildInfo.swift  ClangModuleVerifierOutputParser.swift  ClangSerializedDiagnostics.swift  CommandLineArgument.swift  ConfiguredTarget.swift  Core.swift  CustomTaskTypeDescription.swift  Dependencies.swift  DependencyInfoEditPayload.swift  DependencyResolution.swift  DiagnosticCollectingDelegate.swift  DiagnosticSupport.swift  EnvironmentBindings.swift  ExecutableTask.swift  FileSystemSignatureBasedCache.swift  FileToBuild.swift  KnownFolders.swift  LinkageDependencyResolver.swift  MacCatalystInfo.swift  MacroConfigFileLoader.swift  MacroEvaluationExtensions.swift  MacroExpressionSourceExtensions.swift  MissingFrameworkDiagnostics.swift  OnDemandResources.swift  OptimizationRemarks.swift  PlannedNode.swift  PlannedTask.swift  (+29 more)
Sources/SWBGenericUnixPlatform/: CMakeLists.txt  Plugin.swift  Unix.xcspec  UnixCompile.xcspec  UnixLd.xcspec  UnixLibtool.xcspec
Sources/SWBGenericUnixPlatformPlugin/: PluginMain.swift
Sources/SWBLLBuild/: CMakeLists.txt  LowLevelBuildSystem.swift
Sources/SWBLibc/: CMakeLists.txt  libc.swift
Sources/SWBMacro/: CMakeLists.txt  MacroCondition.swift  MacroConditionExpression.swift  MacroConditionParameter.swift  MacroConditionSet.swift  MacroConfigFileDiagnostic.swift  MacroConfigFileParser.swift  MacroDeclaration.swift  MacroEvaluationProgram.swift  MacroEvaluationScope.swift  MacroExpression.swift  MacroExpressionDiagnostic.swift  MacroExpressionParsing.swift  MacroNamespace.swift  MacroType.swift  MacroValueAssignmentTable.swift  SwiftDriverTripleExtensions.swift
Sources/SWBProjectModel/: CMakeLists.txt  PIFGenerationModel.swift
Sources/SWBProtocol/: AsyncSequence.swift  BuildAction.swift  BuildDescriptionMessages.swift  BuildOperationMessages.swift  BuildSettingsInfoMessageTypes.swift  CMakeLists.txt  IndexingMessages.swift  (+15 more)
(+1201 files in other folders)
